--- a/src/app/app-form/app-form.component.html
+++ b/src/app/app-form/app-form.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (submit)="onSubmit(str.value)">
   <div class="form-group">
     <label for="string">String to be Encoded</label><br />
     <textarea
