--- a/src/app/app-form/app-form.component.html
+++ b/src/app/app-form/app-form.component.html
@@ -20,3 +20,8 @@
   </div>
   <button class="btn btn-primary">Submit</button>
 </form>
+<ul>
+  <li *ngFor="let cipher of cipherArray; index as i; first as isFirst">
+    Cipher: {{ cipher.cipher.cipher }}, Original: {{ cipher.cipher.original }}
+  </li>
+</ul>
